<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Imagem de plano de fundo com gradiente -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_gradient"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

    <!-- Conteúdo da interface do usuário -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center|start">

            <!-- Cabeçalho -->
            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="55sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:layout_marginStart="32dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <!-- Input de localização -->
            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/city"
                android:gravity="center"
                android:inputType="textPostalAddress"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#808080"
                android:autofillHints="postalCode" />

            <!-- Botão Estimar-->
            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/color_background_app"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/botao_localizar"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/color_background_app"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginBottom="100dp"
            app:icon="@android:drawable/ic_menu_mylocation"
            app:iconTint="@color/white"
            app:iconSize="25dp"
            app:iconGravity="textStart"
            android:text="@string/botao_gps"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold" />



    </LinearLayout>
    </ScrollView>

</FrameLayout>