<resources>
    <string name="app_name">SolarApp</string>
    <string name="city_not_found">City not found</string>
    <string name="attention">Atenção</string>
    <string name="campo_invalido">Por favor, digite um local válido!</string>
    <string name="welcome">Olá, bem-vindo de volta!</string>
    <string name="city">Localização (cidade)</string>
    <string name="botao_estimar">Estimar Geração Solar</string>
    <string name="error_fetching_data">Cidade não encontrada!</string>
    <string name="back">Voltar</string>
    <string name="result">Resultado</string>
    <string name="error_network">Conexão com a internet lenta.\nVerifique e tente novamente.</string>
    <string name="botao_localizar">Verificar tempo</string>
    <string name="botao_gps">Localização atual</string>
    <string name="go_to_settings">Ative sua localização</string>
    <string name="location_services_disabled">Localização desabilitada</string>
    <string name="location_not_available">Localização não disponível</string>
    <string name="cancel">Cancelar</string>
    <string name="no_network">Conexão instável ou sem rede.\nVerifique e tente novamente.</string>
    <string name="begging_permission">Para acesssar a localização, o aplicativo precisa da sua permissão.\nPor favor, permita o acesso nas configurações.</string>
    <string name="permission_required">Permissão necessária!</string>
    <string name="permission_denied">Permissão de localização negada</string>
    <string name="location_error">Erro ao obter localização: %s</string>
    <string name="temperature_format">%d°C</string>
</resources>